--- a/static/materials/phil971-syllabus-rational-agency.html
+++ b/static/materials/phil971-syllabus-rational-agency.html
@@ -114,13 +114,13 @@
   }
 
   ul {
-      list-style: disk outside none ;
-      margin-left: 3em;
-      padding-left: 1em;
+      /* list-style: disk outside none ; */
+      /* margin-left: 3em; */
+      /* padding-left: 1em; */
   }
   li {
-      padding-left: 1.5em;
-      text-indent: -1em;
+      /* padding-left: 1.5em; */
+      /* text-indent: -1em; */
   }
 
   #left{
@@ -163,7 +163,7 @@ h2:before {
     <span style="font-variant: small-caps;">Time:</span> T 1:30-3:35 p.m.</br>
     <span style="font-variant: small-caps;">Location:</span> 312 Louise Pound Hall</br>
     <span style="font-variant: small-caps;">Office:</span> 315P Louise Pound Hall</br>
-    <span style="font-variant: small-caps;">Office Hours:</span> T/R 10:30-11:30 a.m.</br>
+    <span style="font-variant: small-caps;">Office Hours:</span> R 1-3:00 p.m.</br>
 </div>
 
 <div id="right" style="line-height: 1.2em;">
